--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
            <div class="row">
 
                <div class="col-md-6">
-                   <p class="copy"> &copy; 2020 FAHIM. All rights reserved. </p>
+                   <p class="copy"> &copy; 2022 Robi Islam. All rights reserved. </p>
                </div>
 
                <div class="col-md-6">
