--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                   <div class="row">
                     <div class="col-lg-6">
                       <div class="copyright">
-                        <p>&copy; 2022 <a href="https://web.facebook.com/robiislam941"></a> REEN. All rights reserved.</p>
+                        <p>&copy; 2022 <a href="https://web.facebook.com/robiislam941"></a> REEN. All rights reserved Robi Islam.</p>
                       </div>
                     </div>
                     <div class="col-lg-6">
